<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".application.ActividadDeBusqueda"
        android:background="@color/colorFondo">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margen_borde_horizontal"
            android:gravity="center"
            android:textSize="@dimen/encabezado2"
            android:text="@string/ingrediente_busqueda"
            android:textColor="#000"

            />

    <EditText
            android:id="@+id/busqueda_textoIngrediente"
            android:textSize="@dimen/encabezado1"
            android:hint="@string/banana"
            android:layout_marginHorizontal="@dimen/margen_borde_horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center|bottom"
            android:inputType="text"
            android:importantForAutofill="no" />

    <Button
            android:id="@+id/boton_busqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busqueda"
            android:layout_gravity="bottom|center_horizontal"
            android:onClick="buscarIngrediente"
            android:enabled="false" />

    <TextView
            android:id="@+id/mensaje_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamano_texto_mediano"
            android:textColor="#f00"
            android:textStyle="bold"

            />

</LinearLayout>