<resources>
    <string name="app_name">ProyectoDAM_Spoonacular</string>
    <string name="ingrediente_busqueda">Buscar ingrediente (en inglés)</string>
    <string name="banana">banana</string>
    <string name="busqueda">Buscar</string>
    <string name="excepcion_pago_api">Payment Required</string>
    <string name="error_ejecucción_busqueda_api">\"Error al ejecutar API con %s como petición\"</string>
    <string name="error_ejecucción_detalles_api">\"Error al ejecutar API con %d como id\"</string>
    <string name="error_respuesta_api">No responde la API</string>
    <string name="error_interrupcion_hilo_api">Se ha interrumpido el hilo de petición de datos</string>
    <string name="error_no_internet">No hay internet</string>
    <string name="error_recibir_intent">Error al recibir datos del intent con nombre %s</string>
    <string name="imagen_ingrediente">imagen_ingrediente</string>
    <string name="intent_peticion_ingredientes">ingredientes_query</string>
    <string name="error_no_resultado">Error no se ha encontrado ningun resultado</string>
    <string name="intent_ingrediente_id">ingrediente_id</string>
    <string name="nombre_ingrediente">Nombre: %s</string>
    <string name="precio_ingrediente">Precio: %s</string>
    <string name="categoria_ingrediente">Categoria: %s</string>
    <string name="mis_preferencias">mis_preferencias</string>
    <string name="resolucion_imagen">resolucion_imagen</string>
    <string name="nutriente">Nutriente</string>
    <string name="cantidad">Cantidad</string>
    <string name="porcentaje">Porcentaje Diario</string>
    <string name="cambiar_orden">Cambiar orden asc/desc</string>
    <string name="cambiar_ordenado">Cambiar ordenado</string>
    <string name="selecciona_orden">Selecciona Orden</string>
    <string name="aceptar">Aceptar</string>
    <string name="cambiar_filtrado">Filtrar</string>
    <string name="proteinas">Proteinas</string>
    <string name="grasas">Grasas</string>
    <string name="hidratos_carbono">Hidratos de Carbono</string>
    <string name="llamadas_api_acabadas">Se han acabado las llamadas a la api por hoy</string>
    <string name="cambiar_resolucion">Cambiar Resolucion</string>
    <string name="sin_categoria">Sin Categoria</string>
</resources>