<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margen_borde_horizontal">



        <TextView
                android:id="@+id/nombre_proteina"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proteinas"
                android:textSize="@dimen/tamano_texto_grande"
                android:textColor="@color/black" />

        <com.google.android.material.slider.RangeSlider

                android:id="@+id/barra_proteina"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/margen_vertical_entre_elementos"
                android:layout_height="wrap_content"
                app:values="@array/valoresSliderRangePorDefect"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:labelStyle="@style/Widget.App.Tooltip" />


        <TextView
                android:id="@+id/nombre_grasa"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/grasas"
                android:textSize="@dimen/tamano_texto_grande"
                android:textColor="@color/black" />

        <com.google.android.material.slider.RangeSlider

                android:id="@+id/barra_grasa"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/margen_vertical_entre_elementos"
                android:layout_height="wrap_content"
                app:values="@array/valoresSliderRangePorDefect"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:labelStyle="@style/Widget.App.Tooltip"

                />


        <TextView
                android:id="@+id/nombre_carbo_hidratos"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/hidratos_carbono"
                android:textSize="@dimen/tamano_texto_grande"
                android:textColor="@color/black" />

        <com.google.android.material.slider.RangeSlider

                android:id="@+id/barra_carbo_hidratos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:values="@array/valoresSliderRangePorDefect"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                app:labelStyle="@style/Widget.App.Tooltip"

                />

</LinearLayout>